--- a/css/layout.css
+++ b/css/layout.css
@@ -1,9 +1,3 @@
-:root{
-  --maxWidth:600px
-}
-
-
-
 *{margin: 0; padding: 0; list-style: none; text-decoration: none;}
 html{width: 100vw; height: 100%; background: var(--gray100);}
-body{max-width: var(--maxWidth); margin: 0 auto; background: var(--white); min-height: 100vh;}
+body{margin: 0 auto; background: var(--white); min-height: 100vh;}
